feat: Implement reports and analytics dashboard with PDF export, withdrawals, and banks management, including Monnify integration.

--- a/env.template
+++ b/env.template
@@ -24,3 +24,18 @@ NEXT_PUBLIC_FIREBASE_PROJECT_ID=eddix-7cf7e
 NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=eddix-7cf7e.appspot.com
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id_here
 NEXT_PUBLIC_FIREBASE_APP_ID=your_app_id_here
+
+# ============================================
+# MONNIFY PAYMENT GATEWAY
+# ============================================
+# Get these from your Monnify dashboard:
+# 1. Go to https://app.monnify.com/
+# 2. Navigate to Settings → API Keys and Webhooks
+# 3. Copy your API Key, Secret Key, and Contract Code
+# Use sandbox URL for testing: https://sandbox.monnify.com
+# Use production URL for live: https://api.monnify.com
+
+NEXT_PUBLIC_MONNIFY_API_KEY=your_monnify_api_key_here
+NEXT_PUBLIC_MONNIFY_SECRET_KEY=your_monnify_secret_key_here
+NEXT_PUBLIC_MONNIFY_CONTRACT_CODE=your_monnify_contract_code_here
+NEXT_PUBLIC_MONNIFY_BASE_URL=https://sandbox.monnify.com
