--- a/package.json
+++ b/package.json
@@ -47,7 +47,10 @@
     "firebase": "^12.6.0",
     "firebase-admin": "^13.6.0",
     "geist": "latest",
+    "html2canvas": "^1.4.1",
     "input-otp": "1.4.1",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "next-themes": "latest",
